# CVSC

./: README.md
docs/: carla_ros_bridge.md  need_read.md  others.md  scenario_designer.md  to_do_list.md
src/controller/: CMakeLists.txt
src/controller/src/: main.cpp
src/controller/src/controller/: base_controller.h  rbfn.cpp  sliding_mode.cpp  sliding_mode.h  smc_rbf.cpp  smc_rbf.h
src/controller/src/controller/adp_learning/: action_network.cpp  backup.cpp  critic_network.cpp  critic_network.h  global.cpp  global.h
src/cvsc/: README.md  mkdocs.yml
src/cvsc/carla_ackermann_control/: README.md
src/cvsc/carla_ackermann_control/config/: EgoVehicleControlParameter.cfg
src/cvsc/carla_launcher/: CMakeLists.txt  ReadMe.md  package.xml
src/cvsc/carla_rambot_adapters/: CMakeLists.txt  ReadMe.md  package.xml
src/cvsc/carla_scenario_runner_ros/: CMakeLists.txt  package.xml
src/cvsc/carla_waypoint_publisher/: README.md
src/cvsc/control_maps/: Town_control.umap  Town_control_BuiltData.uasset
src/cvsc/docs/: carla_rambot_adapters.md  get_started.md  readme.md
src/data_visualization/: plot_config.xml
src/scenarios_designer/: 3d_routes_and_obstacle_design.py  ReadMe.md  csv_to_xml_helper.py  my_config.csv  my_routes.csv  run.sh  run3d.sh
src/scenarios_designer/line_fitting_helpers/: catmull_rom_spline.py
src/scenarios_designer/output_xmls/: route01.xml  route01obs.xml  route02.xml  route02obs.xml  route03.xml  route03obs.xml  route04.xml  route05.xml  route06.xml  route07.xml  route08.xml  routetest.xml  rt.xml  tryfsdsfasfd2.xml
(+35 files in other folders)
